--- a/TripSharing.API/appsettings.Development.json
+++ b/TripSharing.API/appsettings.Development.json
@@ -8,5 +8,6 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "server=localhost; database=TripSharing; user=root; password=root;"
-  }
+  },
+  "Origins": "http://localhost:3000"
 }
