--- a/TripSharing.Application/TripSharing.Application.csproj
+++ b/TripSharing.Application/TripSharing.Application.csproj
@@ -4,4 +4,13 @@
         <TargetFramework>net5.0</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\TripSharing.Domain\TripSharing.Domain.csproj" />
+      <ProjectReference Include="..\TripSharing.Repository\TripSharing.Repository.csproj" />
+    </ItemGroup>
+
 </Project>
