--- a/TripSharing.API/client-app/package.json
+++ b/TripSharing.API/client-app/package.json
@@ -15,6 +15,7 @@
     "mobx": "^6.3.8",
     "mobx-react-lite": "^3.2.2",
     "react": "^17.0.2",
+    "react-calendar": "^3.5.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
@@ -49,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-calendar": "^3.4.4",
     "@types/uuid": "^8.3.3"
   }
 }
