finished registration using jwt

--- a/TripSharing.API/appsettings.Development.json
+++ b/TripSharing.API/appsettings.Development.json
@@ -9,5 +9,6 @@
   "ConnectionStrings": {
     "DefaultConnection": "server=localhost; database=TripSharing; user=root; password=root;"
   },
-  "Origins": "http://localhost:5001"
+  "Origins": "http://localhost:5001",
+  "TokenKey": "temporary token key"
 }
