added new migrations and fix

--- a/TripSharing.Repository/TripSharing.Repository.csproj
+++ b/TripSharing.Repository/TripSharing.Repository.csproj
@@ -12,4 +12,8 @@
       <ProjectReference Include="..\TripSharing.Domain\TripSharing.Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Migrations" />
+    </ItemGroup>
+
 </Project>
