added photo upload module

--- a/TripSharing.API/appsettings.json
+++ b/TripSharing.API/appsettings.json
@@ -1,10 +1,15 @@
 {
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
-"AllowedHosts": "*"
+    }
+  },
+  "AllowedHosts": "*",
+  "Cloudinary": {
+    "CloudName": "dfy6weaxj",
+    "ApiKey": "735827925994296",
+    "ApiSecret": "nh_utT-9MtGc9NZYmpk52xc2KzE"
+  }
 }
