--- a/TripSharing.API/appsettings.Development.json
+++ b/TripSharing.API/appsettings.Development.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost; database=TripSharing; user=root; password=root;"
+    "DefaultConnection": "server=localhost; database=TripSharing; port=3307; user=root; password=root;"
   },
   "Origins": "http://localhost:5001",
   "TokenKey": "temporary token key"
