--- a/TripSharing.API/TripSharing.API.csproj
+++ b/TripSharing.API/TripSharing.API.csproj
@@ -41,6 +41,8 @@
       <_ContentIncludedByDefault Remove="ClientApp1\package-lock.json" />
       <_ContentIncludedByDefault Remove="ClientApp1\package.json" />
       <_ContentIncludedByDefault Remove="ClientApp1\public\manifest.json" />
+      <_ContentIncludedByDefault Remove="Pages\Error.cshtml" />
+      <_ContentIncludedByDefault Remove="Pages\_ViewImports.cshtml" />
     </ItemGroup>
 
     <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
